--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-ejs-layouts": "^2.3.0",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2"
   },
